--- a/Machine Learning/simple_linear_regression.ipynb
+++ b/Machine Learning/simple_linear_regression.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c79170c0",
    "metadata": {},
    "outputs": [],
@@ -90,12 +90,13 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# #library for responsive visualizations\n",
-    "import plotly.express as px\n"
+    "import plotly.express as px\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6457c7f9",
    "metadata": {},
    "outputs": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "90f9b920",
    "metadata": {},
    "outputs": [
@@ -227,7 +228,7 @@
        "9   10   65.3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,11 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b89dddcb-ef4d-413d-bea0-55ddf83ccfba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chipi chipi chapa chapa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"chipi chipi chapa chapa\")"
+   ]
   },
   {
    "cell_type": "markdown",
