create gold table

--- a/2_API/silver/create_silver.ipynb
+++ b/2_API/silver/create_silver.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +130,13 @@
     "    \n",
     "    #save as dataframe\n",
     "    silver_df = pd.DataFrame(silver_data)\n",
+    "\n",
+    "    #convert types\n",
+    "    silver_df[\"date\"] = pd.to_datetime(silver_df[\"date\"])\n",
+    "    silver_df[\"ingestion_date_to\"] = pd.to_datetime(silver_df[\"ingestion_date_to\"])\n",
+    "    silver_df[\"ingestion_date_from\"] = pd.to_datetime(silver_df[\"ingestion_date_from\"])\n",
+    "    silver_df['symbol'] = silver_df['symbol'].astype('string')\n",
+    "\n",
     "    return silver_df\n",
     "\n",
     "\n",
@@ -208,6 +215,32 @@
     "silver_df_check = pd.read_parquet(silver_file)\n",
     "\n",
     "print(silver_df_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingestion_date_from     object\n",
+      "ingestion_date_to       object\n",
+      "symbol                  object\n",
+      "date                    object\n",
+      "open                   float64\n",
+      "high                   float64\n",
+      "low                    float64\n",
+      "close                  float64\n",
+      "volume                   int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(silver_df_check.dtypes)"
    ]
   }
  ],
